[package]
name = "genesis"
version = "0.2.0"
authors = ["cherry <hahungkk@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[profile.release]
lto = true
