[package]
name = "genesis"
version = "0.2.0"
authors = ["cherry <hahungkk@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "64-column-tables", "chrono", "serde_json", "numeric"] }
dotenvy = "0.15"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
rand = "*"
bigdecimal = {version =  "0.4.5" }
chrono = "0.4.38"
uuid = "1.10.0"
axum = {version = "0.7"}

[profile.release]
lto = true
