[package]
name = "genesis"
version = "0.2.0"
authors = ["cherry <hahungkk@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "64-column-tables", "chrono", "uuid", "serde_json", "numeric"] }
dotenvy = "0.15"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
rand = "*"
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
uuid = "1.10.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid", "serde_json"] }
tracing = "0.1.40"

[profile.release]
lto = true
